manifests/gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: station-gateway
spec:
  selector:
    app: station-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
